# CP_Cookbook

./: .gitignore  README.md  environment.yaml  file
benchmarks/: README.md  config.py  demo.py  optalcp-k8s  optalcp-k8s.kubeconfig  run.py
benchmarks/compare/: README.md  compare.mjs  package-lock.json  package.json  utils.mjs
benchmarks/rcpsp-as/: run.py  solve_cpo.py  solve_optal.py
benchmarks/rcpsp-timeoffs/: solve_cpo.py  solve_optal.py
benchmarks/rcpsp-tt/: README.md  run.py  solve_cpo.py  solve_optal.py
data/mmrcpsp-timeoffs/: mmrcpsp_timeoffs_default.data
data/rcpsp-timeoffs/: 01.data  README.md  generate_instances.py
data/rcpspblocking/: 00.data  01.data  02.data
data/rcpspst/: rcpspst_default.data
data/rcpsptt/: rcpsp_tt_120.txt  rcpsp_tt_30.txt  rcpsp_tt_60.txt  rcpsp_tt_90.txt
docker/: Dockerfile  build.sh
docker/build-context/optalcp-py/: pyproject.toml
docker/build-context/optalcp-py/optalcp/: __init__.py  _constants.py  _expressions.py  _int_bool_var.py  _model.py  _parameters.py  _result.py  _scheduling.py  _serialization.py  _solution.py  _solver.py  _types.py  _utils.py
docker/build-context/optalcp_bin_academic/: pyproject.toml
docker/build-context/optalcp_bin_academic/optalcp_bin_academic/: __init__.py
notebooks/: alternative_plans.ipynb  jobshop.ipynb  mmrcpsp_timeoffs.ipynb  multimode_rcpsp.ipynb  optalcp_python.ipynb  preemptive_rcpsp.ipynb  rcpsp.ipynb  rcpsp_blocking.ipynb  rcpsp_blocking_preemption.ipynb  rcpsp_setup.ipynb  rcpsp_timeoffs.ipynb  rcpsptt.ipynb  rcpsptt_cal.ipynb  unit_resource_rcpsp_calendars.ipynb
(+68132 files in other folders)
