[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optalcp"
version = "2026.1.0"
description = "Python API for OptalCP constraint programming solver"
requires-python = ">=3.11"
dependencies = ["typing-extensions>=4.0.0"]

[tool.setuptools.packages.find]
include = ["optalcp*"]

[tool.setuptools.package-data]
optalcp = ["py.typed"]
